# SGSWPlatform

./: Apache_license.txt  README.md  add.sh  build.sh  setup.sh
cts/: CtsBuild.mk
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/: CMakeLists.txt
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Android/app/: Android.mk  AndroidManifest.xml  ant.properties  build.xml  proguard-project.txt  project.properties
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Android/app/jni/: Android.mk
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Android/app/jni/CommonPAWrapper/: Android.mk  CmpBase.cpp  CmpBase.h  CmpCommands.cpp  CmpCommands.h  CmpResponses.cpp  CmpResponses.h  JniHelpers.cpp  JniHelpers.h  com_gd_mobicore_pa_jni_CommonPAWrapper.h  commonwrapper.cpp
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Android/app/jni/McStub/: Android.mk
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Android/app/res/values/: version.xml
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Android/lib/: Android.mk
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Common/: Android.mk  base64.c  base64.h  cacerts.h  commandhandler.c  contentmanager.c  contentmanager.h  enrollmentservicexmlschema.h  pacmp3.c  pacmp3.h  pacmtl.c  pacmtl.h  provisioningengine.c  provisioningengine.h  registry.c  registry.h  seclient.c  seclient.h  tools.h  trustletchannel.c  trustletchannel.h  xmlmessagehandler.c  xmlmessagehandler.h
hardware/samsung_slsi/exynos7570/mobicore/rootpa/Code/Common/include/: logging.h  provisioningagent.h  rootpa.h  rootpaErrors.h  version.h  wrapper.h
kernel/: .gitignore  Makefile  setup.sh
(+1824 files in other folders)
